--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <div data-role="footer" align="center" data-theme="b" data-position="fixed">
-<h4>Gonzalo Contreras Flores</h4>
+<h4>Carlos Alfredo Romero Gonzalez</h4>
 <img src="res/android/mdpi.png" width="56" height="46">
 </div>
 </div>
@@ -77,7 +77,7 @@
 	</div>
 
 	<div data-role="footer" align="center" data-theme="b" data-position="fixed">
-		<h4>Gonzalo Contreras Flores</h4>
+		<h4>Carlos Alfredo Romero Gonzalez</h4>
 		<img src="res/android/mdpi.png" width="56" height="46">	
 	</div>
 </div>
